[package]
name = "rust_python_fib"
version = "0.1.0"
edition = "2021"
authors = ["Daniel Lindsey <dtlindsey@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "fib_example"
crate-type = ["cdylib"]

[dependencies]
cpython = {version = "0.7.0", features = [ "extension-module" ]}

